--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jupyterlab_tensorboard",
-  "version": "0.2.1",
+  "version": "0.1.0",
   "description": "A JupyterLab extension for tensorboard.",
   "keywords": [
     "jupyter",
@@ -19,42 +19,34 @@
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "style": "style/index.css",
   "repository": {
     "type": "git",
     "url": "https://github.com/chaoleili/jupyterlab_tensorboard.git"
   },
   "scripts": {
     "build": "tsc",
-    "clean": "rimraf lib tsconfig.tsbuildinfo",
-    "prepare": "jlpm run clean && jlpm run build",
-    "watch": "tsc -w"
+    "clean": "rimraf lib",
+    "watch": "tsc -w",
+    "prepare": "npm run clean && npm run build"
   },
   "dependencies": {
-    "@jupyterlab/application": "^2.0.0",
-    "@jupyterlab/apputils": "^2.0.0",
-    "@jupyterlab/coreutils": "^4.0.0",
-    "@jupyterlab/launcher": "^2.0.0",
-    "@jupyterlab/services": "^5.0.0",
-    "@jupyterlab/mainmenu": "^2.0.0",
-    "@jupyterlab/filebrowser": "^2.0.0",
-    "@jupyterlab/running": "^2.0.0",
-    "@jupyterlab/ui-components": "^2.0.0",
-    "@lumino/algorithm": "^1.1.3",
-    "@lumino/coreutils": "^1.3.1",
-    "@lumino/disposable": "^1.2.0",
-    "@lumino/domutils": "^1.1.2",
-    "@lumino/messaging": "^1.2.3",
-    "@lumino/signaling": "^1.2.3",
-    "@lumino/widgets": "^1.8.0"
+    "@jupyterlab/application": "^0.16.3",
+    "@jupyterlab/apputils": "^0.16.4",
+    "@jupyterlab/coreutils": "^1.1.3",
+    "@jupyterlab/launcher": "^0.16.3",
+    "@jupyterlab/services": "^2.0.3",
+    "@phosphor/algorithm": "^1.1.2",
+    "@phosphor/coreutils": "^1.3.0",
+    "@phosphor/disposable": "^1.1.2",
+    "@phosphor/domutils": "^1.1.2",
+    "@phosphor/messaging": "^1.2.2",
+    "@phosphor/signaling": "^1.2.2",
+    "@phosphor/widgets": "^1.5.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.0",
-    "typescript": "~3.8.0"
+    "rimraf": "^2.6.1",
+    "typescript": "~2.9.2"
   },
-  "sideEffects": [
-    "style/*.css"
-  ],
   "jupyterlab": {
     "extension": true
   }
