--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jupyterlab_tensorboard",
-  "version": "0.2.1",
-  "description": "A JupyterLab extension for tensorboard.",
+  "version": "0.3.0",
+  "description": "TensorBoard Integration for JupyterLab",
   "keywords": [
     "jupyter",
     "jupyterlab",
-    "jupyterlab-extension"
+    "jupyterlab-extension",
+    "tensorboard"
   ],
   "homepage": "https://github.com/chaoleili/jupyterlab_tensorboard",
   "bugs": {
@@ -18,8 +19,7 @@
   },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
-    "style/index.js"
+    "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -30,42 +30,39 @@
   },
   "scripts": {
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
-    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
+    "build:prod": "jlpm run clean && jlpm run build:lib && jlpm run build:labextension",
     "build:labextension": "jupyter labextension build .",
     "build:labextension:dev": "jupyter labextension build --development True .",
     "build:lib": "tsc",
     "clean": "jlpm run clean:lib",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
-    "clean:labextension": "rimraf myextension/labextension",
+    "clean:labextension": "rimraf jupyterlab_tensorboard/labextension",
     "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
     "eslint": "eslint . --ext .ts,.tsx --fix",
     "eslint:check": "eslint . --ext .ts,.tsx",
-    "install:extension": "jupyter labextension develop --overwrite .",
-    "prepare": "jlpm run clean && jlpm run build:prod",
+    "install:extension": "jlpm run build",
     "watch": "run-p watch:src watch:labextension",
     "watch:src": "tsc -w",
     "watch:labextension": "jupyter labextension watch ."
   },
   "dependencies": {
-    "@jupyterlab/application": "^3.0.5",
-    "@jupyterlab/apputils": "^3.0.4",
-    "@jupyterlab/coreutils": "^5.0.2",
-    "@jupyterlab/filebrowser": "^3.0.5",
-    "@jupyterlab/launcher": "^3.0.4",
-    "@jupyterlab/mainmenu": "^3.0.4",
-    "@jupyterlab/running": "^3.0.4",
-    "@jupyterlab/services": "^6.0.4",
-    "@jupyterlab/ui-components": "^3.0.3",
-    "@lumino/algorithm": "^1.3.3",
-    "@lumino/coreutils": "^1.5.3",
-    "@lumino/disposable": "^1.4.3",
-    "@lumino/domutils": "^1.2.3",
-    "@lumino/messaging": "^1.4.3",
-    "@lumino/signaling": "^1.4.3",
-    "@lumino/widgets": "^1.16.1"
+    "@jupyterlab/application": "^3.2.5",
+    "@jupyterlab/apputils": "^3.2.5",
+    "@jupyterlab/filebrowser": "^3.2.5",
+    "@jupyterlab/launcher": "^3.2.5",
+    "@jupyterlab/mainmenu": "^3.2.5",
+    "@jupyterlab/running": "^3.2.5",
+    "@jupyterlab/services": "^6.2.5",
+    "@jupyterlab/ui-components": "^3.2.5",
+    "@lumino/algorithm": "^1.9.1",
+    "@lumino/coreutils": "^1.11.1",
+    "@lumino/disposable": "^1.10.1",
+    "@lumino/messaging": "^1.10.1",
+    "@lumino/signaling": "^1.10.1",
+    "@lumino/widgets": "^1.30.1"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0",
+    "@jupyterlab/builder": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
@@ -80,9 +77,30 @@
     "style/*.css",
     "style/index.js"
   ],
+  "styleModule": "style/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "jupyterlab": {
+      "discovery": {
+        "server": {
+          "managers": [
+            "pip"
+          ],
+          "base": {
+            "name": "jupyterlab_tensorboard"
+          }
+        }
+    },
     "extension": true,
     "outputDir": "jupyterlab_tensorboard/labextension"
   },
-  "styleModule": "style/index.js"
+  "jupyter-releaser": {
+    "hooks": {
+      "before-build-npm": [
+        "python -m pip install jupyterlab~=3.1",
+        "jlpm"
+      ]
+    }
+  }
 }
